2007-09-26	Dmitry Dulepov	<dmitry@typo3.org>

	* Added related and related_links field to tx_irfaq_q table

2006-11-08  Patrick Broens  <patrick@netcreators.com>
	+ Added a language label for show/hide all

2006-10-27  Patrick Broens  <patrick@netcreators.com>
	~ CSS-styles in static template instead of standard typoscript
	~ Locallang files to XML

2006-10-24  Patrick Broens  <patrick@netcreators.com>

	~ The answer string was not processed correctly with the parseFunc function from tslib_cObj based on configuration set in "lib.parseFunc_RTE" in the current TypoScript template.

2005-10-24  Ingo Renner  <typo3@ingo-renner.com>

	* FIX fixed bug with category selector, now using cHash. Thanks to Benjamin A. Schmit

2005-10-19  Ingo Renner  <typo3@ingo-renner.com>

	* FIX rendering now works like regular content elements

2005-09-30  Ingo Renner  <typo3@ingo-renner.com>

	* ADD added italian translation

2005-07-18  Ingo Renner  <typo3@ingo-renner.com>

	* FIX fixed bug which resulted in a SQL error when retrieving questions from more than one page

2005-05-20  Ingo Renner  <typo3@ingo-renner.com>

	* CHG XHTML Strict compliant

2005-04-08  Ingo Renner  <typo3@ingo-renner.com>

	* CHG Removed all "unsigned" keywords from ext_tables.sql

2005-02-20 Ingo Renner <typo3@ingo-renner.com>
	* FIX small bug when using multiple instances of irfaq on one page

2005-02-20 Ingo Renner <typo3@ingo-renner.com>
	* ADD asked by field
	* ADD category text modes
	* FIX RTE transformations now working
	* CHG manual updated
	* CHG default css
	* CHG default template
	* CHG TCE Forms now use labels of EXT:lang where appropriate
	* code clean up


2005-02-15 Ingo Renner <typo3@ingo-renner.com>

	* ADD dutch translation
	* ADD category selection by GET vars
	* ADD show/hide all function
	* ADD show only one FAQ at a time mode
	* FIX sorting of categories and questions
	* CHG Manual
	* CHG default CSS